# image-quality-evaluator

./: README.md  pyproject.toml  requirements.txt
src/image_quality_evaluator/test/: inference.py
src/image_quality_evaluator/train/: train_model.py
src/image_quality_evaluator/utils/: utils.py
test/: inference.py
train/: train_model.py
